envoy_configs/envoy-gloo-ee.yaml
admin:
  profile_path: "/dev/shm/envoy.prof"
  address:
    socket_address: { address: 127.0.0.1, port_value: 11001 }

static_resources:
  clusters:
  - name: nighthawk_server
    connect_timeout: 10s
    type: STRICT_DNS
    dns_refresh_rate:
      seconds: 999
    load_assignment:
      cluster_name: nighthawk_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 11100
    # this _should_ disable circuit breakers but i'm not 100% sure if this is
    # the right place to put this
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
        - priority: HIGH
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
  - name: httpbin
    connect_timeout: 10s
    type: STRICT_DNS
    dns_refresh_rate:
      seconds: 999
    load_assignment:
      cluster_name: httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 8080
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
        - priority: HIGH
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
  - name: tap_server
    connect_timeout: 10s
    type: STATIC
    dns_refresh_rate:
      seconds: 999
    # http2_protocol_options: {}
    load_assignment:
      cluster_name: tap_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 11200
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
        - priority: HIGH
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 11000
    filter_chains:
      - filters:
          - name: http
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              generate_request_id: false
              codec_type: AUTO
              stat_prefix: config_test
              route_config:
                name: route_config_0
                virtual_hosts:
                  - name: integration
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: /
                        route:
                          # cluster: httpbin
                          cluster: nighthawk_server
              http_filters:
                - name: tap
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
                    common_config:
                      static_config:
                        output_config:
                          sinks:
                            - format: PROTO_TEXT
                              # file_per_tap:
                              #   path_prefix: /dev/shm/taps/taps
                              custom_sink:
                                name: custom_sink
                                typed_config:
                                  "@type": type.googleapis.com/envoy.config.tap.output_sink.v3.HttpOutputSink
                                  server_uri:
                                    uri: "/"
                                    cluster: "tap_server"
                                    timeout:
                                      seconds: 5
                        match:
                          any_match: true
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    dynamic_stats: false
              access_log:
                - name: accesslog
                  filter:
                    not_health_check_filter:
                      {}
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/null
              delayed_close_timeout: 0.010s
